[MODINVOICE-600]. Improve handling of cross-funds invoice payments with adjustments